--- a/calculator-app/index.html
+++ b/calculator-app/index.html
@@ -6,54 +6,61 @@
     <title>Calculator</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
+    
+    <!-- Libraries  -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+    <!-- Code -->
     <script src='index.js'></script>
 </head>
+
 <body>
     <div id="bck-img">
         <!-- Calculator -->
         <div id="calculator" class="calculator center">
             <!-- Calculator Screen -->
             <div id="calc-screen" class="calculator__screen">
-                <p id="creen" class="calculator__screen--input"> </p>
+                <p class="calculator__screen--input" id="screen"> </p>
             </div>
             <!-- Calculator Touchpad --> 
             <div>
                 <form class="touchpad__container" id="touchpad-form">
                     <button form="touchpad-form" type="button" name="key7" 
-                            class="touchpad__key">7</button>
+                            class="touchpad__key" id="key7">7</button>
                     <button form="touchpad-form" type="button" name="key8" 
-                            class="touchpad__key">8</button>
+                            class="touchpad__key" id="key8">8</button>
                     <button form="touchpad-form" type="button" name="key9" 
-                            class="touchpad__key">9</button>
-                    <button form="touchpad-form" type="button" name="keyplus" 
-                            class="touchpad__key">+</button>
+                            class="touchpad__key" id="key9">9</button>
+                    <button form="touchpad-form" type="button" name="keyplus"
+                            class="touchpad__key" id="keyplus">+</button>
                     <button form="touchpad-form" type="button" name="key4" 
-                            class="touchpad__key">4</button>
+                            class="touchpad__key" id="key4">4</button>
                     <button form="touchpad-form" type="button" name="key5" 
-                            class="touchpad__key">5</button>
+                            class="touchpad__key" id=key5>5</button>
                     <button form="touchpad-form" type="button" name="key6" 
-                            class="touchpad__key">6</button>
+                            class="touchpad__key" id="key6">6</button>
                     <button form="touchpad-form" type="button" name="keymin" 
-                            class="touchpad__key">-</button>
+                            class="touchpad__key" id="keyminus">-</button>
                     <button form="touchpad-form" type="button" name="key1" 
-                            class="touchpad__key">1</button>
+                            class="touchpad__key" id="key1">1</button>
                     <button form="touchpad-form" type="button" name="key2" 
-                            class="touchpad__key">2</button>
+                            class="touchpad__key" id="key2">2</button>
                     <button form="touchpad-form" type="button" name="key3" 
-                            class="touchpad__key">3</button>
-                    <button form="touchpad-form" type="button" name="keymult" 
-                            class="touchpad__key">*</button>
+                            class="touchpad__key" id="key3">3</button>
+                    <button form="touchpad-form" type="button" name="keymult"                           
+                            class="touchpad__key" id="keymult">*</button>
                     <button form="touchpad-form" type="button" name="keyc" 
-                            class="touchpad__key">C</button>
+                            class="touchpad__key" id="keyc">C</button>
                     <button form="touchpad-form" type="button" name="key0" 
-                            class="touchpad__key">0</button>
+                            class="touchpad__key" id="key0">0</button>
                     <button form="touchpad-form" type="button" name="keyeq" 
-                            class="touchpad__key">=</button>
+                            class="touchpad__key" id="keyequal">=</button>
                     <button form="touchpad-form" type="button" name="keydiv" 
-                            class="touchpad__key">/</button>
+                            class="touchpad__key" id="keydiv">/</button>
                 </form>
             </div>
         </div>
     </div>
 </body>
+
 </html>
+
