--- a/multi/quiz-app/quiz.html
+++ b/multi/quiz-app/quiz.html
@@ -29,7 +29,10 @@
             <h1 id="main-heading">The Quiz App</h1>
             <div id="main-div">
                 <div id="quiz-wrapper">
-                    <form class="quiz" id="quiz">
+                    <form class="quiz" id="quiz" onsubmit="return false;">
+
+                        <!-- Here goes the questions, loaded using an API call -->
+
                         <section id="submit-section">
                             <input id="btn-submit" type="submit" value="Submit"/>
                         </section>
