--- a/multi/emoji-maker/emoji.html
+++ b/multi/emoji-maker/emoji.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="./emoji.css" />
     <script src="https://kit.fontawesome.com/35c398e458.js" crossorigin="anonymous"></script>
 
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+    <script src="./emoji.js"></script>
+
 </head>
 <body>
     <main>        
