Forgot the html file

--- a/multi/emoji-maker/emoji.html
+++ b/multi/emoji-maker/emoji.html
@@ -43,8 +43,8 @@
                         <img id="eye-rolling" src="./assets/eyes/rolling.png" />
                         <img id="eye-winking" src="./assets/eyes/winking.png" />
                     </div>
-                    <i id="show-skin-card" class="fas fa-chevron-left previous-step"></i>
-                    <i id="show-mouth-card" class="fas fa-chevron-right next-step"></i>
+                    <i id="show-skin-card" class="fas fa-chevron-left previous-step show-skin-card"></i>
+                    <i id="show-mouth-card" class="fas fa-chevron-right next-step show-mouth-card"></i>
                 </div>
                 <div id="select-mouth-card" class="card left-card">
                     <h3>Select Mouth</h3>
