Smart watch showcase
- Logic interaction
  - Change color on color-buttons click.
  - Show time and heartbeat.
    - There is a bug on centering the elements inside the watch.
  - Alert when buying watch.
- Minor changes on design (HTML and CSS).

--- a/smart-watch-showcase/index.html
+++ b/smart-watch-showcase/index.html
@@ -22,24 +22,25 @@
     </div>
 
     <div class="row">
-        <div class="column1 container"> 
+        <!-- Smart Watch -->
+        <div class="column1"> 
             <img src="../assets/sw-black.png" alt="Black Strap" class="smart-watch" id="img-sw">
-            <div class="text-block" id="sw-screen">
-                <h2 id="time">00:00:00</h2>
-                <img src="" alt="" id="heart-rate">
-            </div>
+            
+            <h2 class="top-image" id="time">00:00:00</h2>
+            <img src="../assets/heart-rate.png" alt="Heart Rate" 
+                 class="heart top-image" id="heart-rate"> 
         </div>
+
+        <!-- Options and Features -->
         <div class="column2">
-            <div>
-                <h1>FitBit 19 - The Smartest Watch</h1>
-                <p>
-                    Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor 
-                    Lorem ipsum dolor Lorem ipsum dolor.
-                </p>
-            </div>
+            <h1>FitBit 19 - The Smartest Watch</h1>
+            <p>
+                Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor 
+                Lorem ipsum dolor Lorem ipsum dolor.
+            </p>
 
             <!-- Color selector -->
-            <div class="v-span">
+            <div>
                 <h3>Select Color</h3>
 
                 <button class="round-button color-button black" id="btn-black"></button>
@@ -50,14 +51,14 @@
             </div>
 
             <!-- Features -->
-            <div class="v-span">
+            <div>
                 <h3>Features</h3>
                 <button class="round-button feature-button" id="btn-time"> Time </button>
                 <button class="round-button feature-button" id="btn-hr"> Heart Rate </button>
             </div>
 
             <!-- Buy -->
-            <div class="v-span">
+            <div>
                 <button class="round-button buy-button orange" id="btn-buy"> BUY NOW </button>
             </div>
         </div>
